--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Combined Auto Data & Number Copy (with PC & Mobile)</title>
+<title>Auto Data & Number Copy (Mobile/PC)</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 <style>
 body {
@@ -33,9 +33,15 @@ body {
     min-height: 2rem;
     transition: color 0.3s, transform 0.2s;
 }
+/* Zoom animation for copy */
+@keyframes copyZoom {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.15); }
+    100% { transform: scale(1); }
+}
 .data-text.copied {
     color: #00ffae;
-    transform: scale(1.05);
+    animation: copyZoom 0.5s ease forwards;
 }
 .stats-container {
     display: flex;
@@ -61,21 +67,14 @@ button {
     border: none;
     outline: none;
 }
-
-/* circular icon buttons */
 .icon-btn {
     width:48px; height:48px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-size:1.2rem; color:#fff;
 }
 .icon-btn:hover { transform: translateY(-3px); }
-
-/* specific colors */
 .username-btn { background:#007bff; }
 .gmail-btn { background:#28a745; color:#fff; }
 .name-btn { background:#ffc107; color:#333; }
-.pc-btn { background:#6f42c1; } /* purple */
-.mobile-btn { background:#17a2b8; } /* cyan */
 
-/* Compact Number Copy */
 textarea {
     width: 100%;
     height: 90px;
@@ -100,11 +99,13 @@ textarea {
     border:none;
     cursor:pointer;
     color:#fff;
+    transition: transform 0.2s ease, background 0.3s ease, color 0.3s ease;
 }
 .numbers-list button.copied {
     background:#00ffae;
     color:#000;
     font-weight:bold;
+    animation: copyZoom 0.5s ease forwards;
 }
 .control-buttons {
     display:flex;
@@ -135,8 +136,6 @@ textarea {
         <div id="usernameStats" class="stats"><i class="fa-solid fa-user"></i> 0/0</div>
         <div id="gmailStats" class="stats"><i class="fa-solid fa-envelope"></i> 0/0</div>
         <div id="nameStats" class="stats"><i class="fa-solid fa-id-badge"></i> 0/0</div>
-        <div id="pcStats" class="stats"><i class="fa-solid fa-laptop"></i> 0/0</div>
-        <div id="mobileStats" class="stats"><i class="fa-solid fa-mobile-screen-button"></i> 0/0</div>
     </div>
 
     <div class="data-text" id="dataText">Loading...</div>
@@ -145,8 +144,6 @@ textarea {
         <button class="icon-btn username-btn" id="usernameBtn" title="Copy Username"><i class="fa-solid fa-user"></i></button>
         <button class="icon-btn gmail-btn" id="gmailBtn" title="Copy Gmail"><i class="fa-solid fa-envelope"></i></button>
         <button class="icon-btn name-btn" id="nameBtn" title="Copy Name"><i class="fa-solid fa-id-badge"></i></button>
-        <button class="icon-btn pc-btn" id="pcBtn" title="Copy PC Email"><i class="fa-solid fa-laptop"></i></button>
-        <button class="icon-btn mobile-btn" id="mobileBtn" title="Copy Mobile Email"><i class="fa-solid fa-mobile-screen-button"></i></button>
     </div>
 </div>
 
@@ -163,23 +160,27 @@ textarea {
 
 <script>
 // ---------------- AUTO DATA JS ----------------
-let data = { username: [], gmail: [], name: [], pc: [], mobile: [] };
-let used = { username: new Set(), gmail: new Set(), name: new Set(), pc: new Set(), mobile: new Set() };
-let totals = { username: 0, gmail: 0, name: 0, pc: 0, mobile: 0 };
+let data = { username: [], gmail: [], name: [] };
+let used = { username: new Set(), gmail: new Set(), name: new Set() };
+let totals = { username: 0, gmail: 0, name: 0 };
 const dataDiv = document.getElementById("dataText");
 
-// URLs: added PC + Mobile raw links (your provided raw mobile, and pc raw)
+// URLs
 const urls = {
     username: "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/username.txt",
-    gmail: "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/mobile_emails.txt", // original gmail slot
-    name: "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/name.txt",
-    pc: "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/pc_emails.txt",
-    mobile: "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/mobile_emails.txt"
+    name: "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/name.txt"
 };
+
+// Gmail URL depends on device
+if (/Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+    urls.gmail = "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/mobile_emails.txt";
+} else {
+    urls.gmail = "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/pc_emails.txt";
+}
 
 function updateStats(type){
     const copied = used[type].size;
-    let icon = type === "username" ? "user" : type === "gmail" ? "envelope" : type === "name" ? "id-badge" : type === "pc" ? "laptop" : "mobile-screen-button";
+    let icon = type === "username" ? "user" : type === "gmail" ? "envelope" : "id-badge";
     document.getElementById(`${type}Stats`).innerHTML = `<i class="fa-solid fa-${icon}"></i> ${copied}/${totals[type]}`;
 }
 
@@ -190,7 +191,6 @@ function showNext(type){
     if(data[type].length===0){
         dataDiv.textContent = `🎉 All ${type}s copied!`;
     } else {
-        // show preview (trim if long)
         const preview = data[type][0].length > 36 ? data[type][0].slice(0,36)+'...' : data[type][0];
         dataDiv.textContent = preview;
         dataDiv.classList.remove("copied");
@@ -198,28 +198,29 @@ function showNext(type){
     updateStats(type);
 }
 
+function animateCopy(el){
+    el.classList.add("copied");
+    setTimeout(()=> el.classList.remove("copied"), 500);
+}
+
 function copyData(type){
     if(data[type].length===0) return;
     const current = data[type][0];
     if(!used[type].has(current)){
-        // fallback copy method for broad browser support
         const temp = document.createElement("textarea");
         temp.value = current;
         document.body.appendChild(temp);
         temp.select();
         temp.setSelectionRange(0,99999);
         let success = false;
-        try {
-            success = document.execCommand("copy");
-        } catch(e){ success = false; }
+        try { success = document.execCommand("copy"); } catch(e){ success=false; }
         document.body.removeChild(temp);
 
-        // try navigator.clipboard if execCommand failed and secure context available
         const afterCopy = (ok)=>{
             if(ok){
                 used[type].add(current);
                 localStorage.setItem(`used_${type}`, JSON.stringify([...used[type]]));
-                dataDiv.classList.add("copied");
+                animateCopy(dataDiv);
                 dataDiv.textContent = `✅ Copied ${type}`;
                 setTimeout(()=>showNext(type),700);
             } else {
@@ -237,13 +238,11 @@ function copyData(type){
     }
 }
 
-// initialize loaders and buttons for each type
-["username","gmail","name","pc","mobile"].forEach(type=>{
-    // restore used sets from localStorage
+// Load data for all types
+["username","gmail","name"].forEach(type=>{
     const stored = localStorage.getItem(`used_${type}`);
     if(stored) try { used[type] = new Set(JSON.parse(stored)); } catch(e){ used[type] = new Set(); }
 
-    // fetch data file (won't run here on server — runs in user's browser)
     fetch(urls[type])
     .then(res=>{
         if(!res.ok) throw new Error('Network response not ok');
@@ -256,13 +255,11 @@ function copyData(type){
     })
     .catch(err=>{
         console.error(`Error loading ${type}`,err);
-        // If first load and other types already loaded, don't overwrite message
         dataDiv.textContent = `❌ Failed to load ${type} data`;
         totals[type] = 0;
         updateStats(type);
     });
 
-    // attach button handler
     const btn = document.getElementById(`${type}Btn`);
     if(btn) btn.onclick = ()=>copyData(type);
 });
@@ -273,7 +270,6 @@ let numbersArray = [];
 document.getElementById("generateBtn").onclick = function(){
     const input = document.getElementById("numbersInput").value;
     const numbers = input.split(/\r?\n/).map(n => n.trim()).filter(n => n!=="");
-    // ensure plus only once and basic normalization (do not validate country codes)
     numbersArray = numbers.map(n => n.startsWith("+") ? n : '+'+n);
     const listDiv = document.getElementById("numbersList");
     listDiv.innerHTML="";
@@ -284,19 +280,17 @@ document.getElementById("generateBtn").onclick = function(){
         btn.onclick = ()=> {
             if(navigator.clipboard && navigator.clipboard.writeText){
                 navigator.clipboard.writeText(num).then(()=>{
-                    btn.dataset.copied = "true";
-                    btn.classList.add("copied");
+                    animateCopy(btn);
                 }).catch(()=>{
-                    // fallback
                     const t = document.createElement("textarea");
                     t.value = num; document.body.appendChild(t); t.select();
-                    try { document.execCommand("copy"); btn.dataset.copied="true"; btn.classList.add("copied"); } catch(e){}
+                    try { document.execCommand("copy"); animateCopy(btn); } catch(e){}
                     document.body.removeChild(t);
                 });
             } else {
                 const t = document.createElement("textarea");
                 t.value = num; document.body.appendChild(t); t.select();
-                try { document.execCommand("copy"); btn.dataset.copied="true"; btn.classList.add("copied"); } catch(e){ alert("Copy failed"); }
+                try { document.execCommand("copy"); animateCopy(btn); } catch(e){ alert("Copy failed"); }
                 document.body.removeChild(t);
             }
         };
@@ -310,13 +304,13 @@ document.getElementById("copyAllBtn").onclick = ()=> {
     if(navigator.clipboard && navigator.clipboard.writeText){
         navigator.clipboard.writeText(text).then(()=>{
             document.querySelectorAll("#numbersList button").forEach(btn=>{
-                btn.dataset.copied = "true"; btn.classList.add("copied");
+                animateCopy(btn);
             });
             alert("✅ All numbers copied!");
         }).catch(()=>{ alert("❌ Copy failed"); });
     } else {
         const t = document.createElement("textarea"); t.value = text; document.body.appendChild(t); t.select();
-        try { document.execCommand("copy"); document.querySelectorAll("#numbersList button").forEach(btn=>{btn.dataset.copied="true"; btn.classList.add("copied");}); alert("✅ All numbers copied!"); } catch(e){ alert("❌ Copy failed"); }
+        try { document.execCommand("copy"); document.querySelectorAll("#numbersList button").forEach(btn=>animateCopy(btn)); alert("✅ All numbers copied!"); } catch(e){ alert("❌ Copy failed"); }
         document.body.removeChild(t);
     }
 };
