--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Auto Data & Number Copy (Mobile/PC)</title>
+<title>Auto Data & Number Copy</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 <style>
 body {
@@ -31,17 +31,6 @@ body {
     margin: 15px 0;
     word-break: break-word;
     min-height: 2rem;
-    transition: color 0.3s, transform 0.2s;
-}
-/* Zoom animation for copy */
-@keyframes copyZoom {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.15); }
-    100% { transform: scale(1); }
-}
-.data-text.copied {
-    color: #00ffae;
-    animation: copyZoom 0.5s ease forwards;
 }
 .stats-container {
     display: flex;
@@ -70,7 +59,6 @@ button {
 .icon-btn {
     width:48px; height:48px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-size:1.2rem; color:#fff;
 }
-.icon-btn:hover { transform: translateY(-3px); }
 .username-btn { background:#007bff; }
 .gmail-btn { background:#28a745; color:#fff; }
 .name-btn { background:#ffc107; color:#333; }
@@ -99,13 +87,11 @@ textarea {
     border:none;
     cursor:pointer;
     color:#fff;
-    transition: transform 0.2s ease, background 0.3s ease, color 0.3s ease;
 }
 .numbers-list button.copied {
-    background:#00ffae;
-    color:#000;
-    font-weight:bold;
-    animation: copyZoom 0.5s ease forwards;
+    background-color: #00ffae;
+    color: #000;
+    font-weight: bold;
 }
 .control-buttons {
     display:flex;
@@ -123,9 +109,28 @@ textarea {
     cursor:pointer;
     font-size:0.9rem;
 }
+
+/* ICON BUTTON ANIMATION */
+.icon-btn {
+    width:48px; height:48px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-size:1.2rem; color:#fff;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.icon-btn:hover {
+    transform: scale(1.2);
+    box-shadow: 0 0 10px rgba(255,255,255,0.5);
+}
+
+.icon-btn:active {
+    transform: scale(1.1);
+    box-shadow: 0 0 5px rgba(255,255,255,0.7);
+}
+
+
 @media (max-width:480px){
     .icon-btn { width:44px; height:44px; font-size:1rem; }
 }
+
 </style>
 </head>
 <body>
@@ -147,7 +152,7 @@ textarea {
     </div>
 </div>
 
-<!-- COMPACT NUMBER COPY SECTION -->
+<!-- NUMBER COPY SECTION -->
 <div class="container" id="numberCopyContainer">
     <textarea id="numbersInput" placeholder="একটি নাম্বার প্রতি লাইনে লিখুন"></textarea>
     <div class="control-buttons">
@@ -159,166 +164,95 @@ textarea {
 </div>
 
 <script>
-// ---------------- AUTO DATA JS ----------------
-let data = { username: [], gmail: [], name: [] };
-let used = { username: new Set(), gmail: new Set(), name: new Set() };
-let totals = { username: 0, gmail: 0, name: 0 };
-const dataDiv = document.getElementById("dataText");
+// ---------------- AUTO DATA ----------------
+let data={username:[], gmail:[], name:[]};
+let used={username:new Set(), gmail:new Set(), name:new Set()};
+let totals={username:0, gmail:0, name:0};
+const dataDiv=document.getElementById("dataText");
 
-// URLs
-const urls = {
-    username: "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/username.txt",
-    name: "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/name.txt"
+const urls={
+    username:"https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/username.txt",
+    name:"https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/name.txt",
+    gmail: /Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent) ?
+        "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/mobile_emails.txt" :
+        "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/pc_emails.txt"
 };
 
-// Gmail URL depends on device
-if (/Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent)) {
-    urls.gmail = "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/mobile_emails.txt";
-} else {
-    urls.gmail = "https://raw.githubusercontent.com/allinworld2k/bug-free-journey/refs/heads/main/pc_emails.txt";
-}
-
 function updateStats(type){
-    const copied = used[type].size;
-    let icon = type === "username" ? "user" : type === "gmail" ? "envelope" : "id-badge";
-    document.getElementById(`${type}Stats`).innerHTML = `<i class="fa-solid fa-${icon}"></i> ${copied}/${totals[type]}`;
+    document.getElementById(`${type}Stats`).innerHTML=`<i class="fa-solid fa-${type==='username'?'user':type==='gmail'?'envelope':'id-badge'}"></i> ${used[type].size}/${totals[type]}`;
 }
 
 function showNext(type){
-    while(data[type].length>0 && used[type].has(data[type][0])){
-        data[type].shift();
-    }
-    if(data[type].length===0){
-        dataDiv.textContent = `🎉 All ${type}s copied!`;
+    while(data[type].length && used[type].has(data[type][0])) data[type].shift();
+    if(!data[type].length){
+        dataDiv.textContent=`🎉 All ${type}s copied!`;
     } else {
-        const preview = data[type][0].length > 36 ? data[type][0].slice(0,36)+'...' : data[type][0];
-        dataDiv.textContent = preview;
-        dataDiv.classList.remove("copied");
+        const preview=data[type][0].length>36?data[type][0].slice(0,36)+'...':data[type][0];
+        dataDiv.textContent=preview;
     }
     updateStats(type);
 }
 
-function animateCopy(el){
-    el.classList.add("copied");
-    setTimeout(()=> el.classList.remove("copied"), 500);
-}
-
 function copyData(type){
-    if(data[type].length===0) return;
-    const current = data[type][0];
+    if(!data[type].length) return;
+    const current=data[type][0];
     if(!used[type].has(current)){
-        const temp = document.createElement("textarea");
-        temp.value = current;
-        document.body.appendChild(temp);
-        temp.select();
-        temp.setSelectionRange(0,99999);
-        let success = false;
-        try { success = document.execCommand("copy"); } catch(e){ success=false; }
-        document.body.removeChild(temp);
-
-        const afterCopy = (ok)=>{
-            if(ok){
-                used[type].add(current);
-                localStorage.setItem(`used_${type}`, JSON.stringify([...used[type]]));
-                animateCopy(dataDiv);
-                dataDiv.textContent = `✅ Copied ${type}`;
-                setTimeout(()=>showNext(type),700);
-            } else {
-                alert("❌ Copy failed. Use Ctrl+C / Tap & Hold manually.");
-            }
-        };
-
-        if(success){
-            afterCopy(true);
-        } else if(navigator.clipboard && navigator.clipboard.writeText){
-            navigator.clipboard.writeText(current).then(()=>afterCopy(true)).catch(()=>afterCopy(false));
-        } else {
-            afterCopy(false);
-        }
+        navigator.clipboard.writeText(current).then(()=>{
+            used[type].add(current);
+            localStorage.setItem(`used_${type}`, JSON.stringify([...used[type]]));
+            dataDiv.textContent=`✅ Copied ${type}`;
+            setTimeout(()=>showNext(type), 300);
+        }).catch(()=>alert("❌ Copy failed"));
     }
 }
 
-// Load data for all types
 ["username","gmail","name"].forEach(type=>{
-    const stored = localStorage.getItem(`used_${type}`);
-    if(stored) try { used[type] = new Set(JSON.parse(stored)); } catch(e){ used[type] = new Set(); }
-
-    fetch(urls[type])
-    .then(res=>{
-        if(!res.ok) throw new Error('Network response not ok');
-        return res.text();
-    })
-    .then(txt=>{
-        data[type] = txt.split(/\r?\n/).map(l=>l.trim()).filter(l=>l!=="");
-        totals[type] = data[type].length;
+    const stored=localStorage.getItem(`used_${type}`);
+    if(stored) try{used[type]=new Set(JSON.parse(stored));}catch(e){used[type]=new Set();}
+    fetch(urls[type]).then(r=>r.text()).then(txt=>{
+        data[type]=txt.split(/\r?\n/).map(l=>l.trim()).filter(l=>l!=="");
+        totals[type]=data[type].length;
         showNext(type);
-    })
-    .catch(err=>{
-        console.error(`Error loading ${type}`,err);
-        dataDiv.textContent = `❌ Failed to load ${type} data`;
-        totals[type] = 0;
-        updateStats(type);
-    });
-
-    const btn = document.getElementById(`${type}Btn`);
-    if(btn) btn.onclick = ()=>copyData(type);
+    }).catch(err=>{console.error(err); dataDiv.textContent=`❌ Failed to load ${type}`; totals[type]=0; updateStats(type);});
+    document.getElementById(`${type}Btn`).onclick=()=>copyData(type);
 });
 
-// ---------------- COMPACT NUMBER COPY JS ----------------
-let numbersArray = [];
+// ---------------- NUMBER COPY ----------------
+let numbersArray=[];
+const numbersList=document.getElementById("numbersList");
 
-document.getElementById("generateBtn").onclick = function(){
-    const input = document.getElementById("numbersInput").value;
-    const numbers = input.split(/\r?\n/).map(n => n.trim()).filter(n => n!=="");
-    numbersArray = numbers.map(n => n.startsWith("+") ? n : '+'+n);
-    const listDiv = document.getElementById("numbersList");
-    listDiv.innerHTML="";
-    numbersArray.forEach(num=>{
-        const btn = document.createElement("button");
-        btn.textContent = num;
-        btn.dataset.copied = "false";
-        btn.onclick = ()=> {
-            if(navigator.clipboard && navigator.clipboard.writeText){
-                navigator.clipboard.writeText(num).then(()=>{
-                    animateCopy(btn);
-                }).catch(()=>{
-                    const t = document.createElement("textarea");
-                    t.value = num; document.body.appendChild(t); t.select();
-                    try { document.execCommand("copy"); animateCopy(btn); } catch(e){}
-                    document.body.removeChild(t);
-                });
-            } else {
-                const t = document.createElement("textarea");
-                t.value = num; document.body.appendChild(t); t.select();
-                try { document.execCommand("copy"); animateCopy(btn); } catch(e){ alert("Copy failed"); }
+document.getElementById("generateBtn").onclick=()=>{
+    const input=document.getElementById("numbersInput").value;
+    const numbers=input.split(/\r?\n/).map(n=>n.trim()).filter(n=>n!=="");
+    numbersArray=numbers.map(n=>n.startsWith("+")?n:'+'+n);
+    numbersList.innerHTML="";
+    numbersArray.forEach((num,index)=>{
+        const btn=document.createElement("button");
+        btn.textContent=num;
+        btn.onclick=()=>{
+            navigator.clipboard.writeText(num).then(()=>{
+                btn.classList.add("copied"); // change color
+            }).catch(()=>{
+                const t=document.createElement("textarea"); t.value=num; document.body.appendChild(t); t.select();
+                try{document.execCommand("copy"); btn.classList.add("copied");}catch(e){alert("Copy failed");}
                 document.body.removeChild(t);
-            }
+            });
         };
-        listDiv.appendChild(btn);
+        numbersList.appendChild(btn);
     });
 };
 
-document.getElementById("copyAllBtn").onclick = ()=> {
-    if(numbersArray.length===0) return;
-    const text = numbersArray.join("\n");
-    if(navigator.clipboard && navigator.clipboard.writeText){
-        navigator.clipboard.writeText(text).then(()=>{
-            document.querySelectorAll("#numbersList button").forEach(btn=>{
-                animateCopy(btn);
-            });
-            alert("✅ All numbers copied!");
-        }).catch(()=>{ alert("❌ Copy failed"); });
-    } else {
-        const t = document.createElement("textarea"); t.value = text; document.body.appendChild(t); t.select();
-        try { document.execCommand("copy"); document.querySelectorAll("#numbersList button").forEach(btn=>animateCopy(btn)); alert("✅ All numbers copied!"); } catch(e){ alert("❌ Copy failed"); }
-        document.body.removeChild(t);
-    }
+document.getElementById("copyAllBtn").onclick=()=>{
+    if(!numbersArray.length) return;
+    const text=numbersArray.join("\n");
+    navigator.clipboard.writeText(text).then(()=>{
+        document.querySelectorAll("#numbersList button").forEach(btn=>btn.classList.add("copied"));
+        alert("✅ All numbers copied!");
+    }).catch(()=>alert("❌ Copy failed"));
 };
 
-document.getElementById("clearBtn").onclick = ()=> {
-    numbersArray=[];
-    document.getElementById("numbersList").innerHTML="";
-    document.getElementById("numbersInput").value="";
+document.getElementById("clearBtn").onclick=()=>{
+    numbersArray=[]; numbersList.innerHTML=""; document.getElementById("numbersInput").value="";
 };
 </script>
 
